skin/frontend/default/default/css/boxes.css
/* ... */
.generic-product-grid td {
    border-right:1px solid #d9dde3;
    border-bottom:1px solid #d9dde3;
    padding:12px 10px;
    line-height:1.6em;
    }
.generic-product-grid tr.last td { border-bottom:0; }
.generic-product-grid td.last { border-right:0; }
.generic-product-grid .product-image { text-align:center; }
.generic-product-grid td.empty-product{ border-right:0; background:#f5f6f6; }


/********************** Layered Navigation */
.layered-nav .head {
    margin:0;
    background:url(../images/layered_nav_head_bg.gif) no-repeat;
    height:24px;
    }
.layered-nav h3 { display:none; }
.layered-nav .border-creator { border-style:solid; border-color:#a0b3c3; border-width:0 1px 1px 1px; }
.layered-nav h4 {
    margin:0;
    border:1px solid #b9ccdd;
    border-left:0;
    border-right:0;
    padding:3px 10px;
    background:url(../images/layered_nav_narrowed_category_heading.gif) #d5e8ff;
    color:#1f5070;
    font-weight:bold;
    font-size:1em;
    }
.layered-nav .narrowed-category li { background:url(../images/narrow_category_bg.gif) repeat-x 0 100% #fff; padding:4px 6px 4px 10px;}
.layered-nav .narrowed-category li .label {
    background:url(../images/narrow_by_li_by.gif) no-repeat 0 .2em;
    padding-left:20px;
    font-weight:bold;
    text-transform:uppercase;
    }
.layered-nav .widget-btn {
    float:right;
    margin:.1em 0 0 5px;
    font-size:.95em;
    }
.layered-nav .actions {
    border-style:solid;
    border-color:#dee5e8;
    border-width:1px 0;
    padding:4px 10px;
    background:#cad6e4;
    }
.narrow-by dl {
    background:#e7f1f4;
    padding:0 0 1em 0;
    }
.narrow-by dt {
    margin:0;
    padding:7px 10px 0 28px;
    background:url(../images/narrow_by_set.gif) no-repeat 9px .9em;
    color:#2f2f2f;
    text-transform:uppercase;
    }
.narrow-by dd {
    background:url(../images/narrow_by_dd_bg.gif) repeat-x 0 100%;
    padding:0 12px .8em 12px;
    }
.narrow-by dd li { margin-bottom:.3em; line-height:1.3em;}
.narrow-by dd.last { background:none;}



/********************* Tool Tips */
.tool-tip { border:1px solid #7ba7c9;  background:#eaf6ff; position:absolute; }
.tool-tip .inline-content { padding:8px; }
.tool-tip .block-content { padding:15px 20px; }
.tool-tip .btn-close { display:block; position:absolute; right:6px; text-align:right; top:6px;}




/************************************************************/
/******************[ Mage_CSS_E Shop Pages]******************/
/************************************************************/

/********************** Home */

.home-callout { margin-bottom:12px; }
.home-callout img { display:block }
.home-spot { float:left; width:470px; margin-left:20px; }
.best-selling h3 { margin:12px 0 6px 0; color:#e25203; font-size:1.2em; }
.best-selling table { border-top:1px solid #ccc; }
.best-selling tr.odd { background:url(../images/best_selling_tr_odd_bg.gif) repeat-x 0 100% #eee; }
.best-selling tr.even { background:url(../images/best_selling_tr_even_bg.gif) repeat-x 0 100% #fff; }
.best-selling td { width:50%; border-bottom:1px solid #ccc; padding:8px 10px 8px 8px; font-size:.95em; }
.best-selling .product-img { float:left; border:2px solid #dcdcdc;}
.best-selling .product-description { margin-left:107px; line-height:1.3em; }
.best-selling a.product-name, .home-spot .best-selling a.product-name:hover { color:#203548; }

.recently h3 { margin:12px 0 6px 0; color:#e25203; font-size:1.2em; }
.recently .product-image { border:2px solid #dcdcdc;}
.recently a.product-name, .recently a.product-name:hover { color:#1d7ecf; font-size:11px; }
.recently .add-to {margin-top:5px;font-size:11px; }
table.recently-list {width:100%;}
table.recently-list td {width:20%;}

/********************** Search */
.advanced-search {
    margin:28px 0;
    border:1px solid #bbafa0;
    padding:22px 25px 12px 25px;
    background:#fbfaf6;
    }
.advanced-search .legend {
    margin-top:-33px;
    float:left;
    border:1px solid #f19900;
    background:#F9F3E3;
    padding:0 8px;
    color:#E76200;
    font-weight:bold;
    font-size:1.1em;
}
.advanced-search li {margin-bottom:5px}
.advanced-search li label {width:150px;float:left;}
.advanced-search .input-text {width:250px}
.advanced-search select {width:256px;padding:2px}
.advanced-search .field-row {display:inline;width:250px;}
.advanced-search .range .input-text {width:70px}

.advanced-search-nothing-found {
    font-weight: bold;
    color: #df280a;
    margin-bottom: 10px;
    }

.advanced-search-found-amount {
    margin-bottom: 10px;
    }

.advanced-search-summary-box {
    padding: 10px 10px 5px 10px;
    border: 1px solid #E9D7C9;
    background-color: #FFF6F1;
    }

.advanced-search-summary-tip {
    clear: both;
    font-weight: bold;
    }

.advanced-search-summary-box ul {
    list-style: none;
    float: left;
    width: 50%;
    margin-bottom: 10px;
    }

/*.advanced-search-summary-box ul li {
    }*/

.advanced-search-summary-box ul li span {
    background-image: url(../images/search_criteria.gif);
    background-repeat: no-repeat;
    background-position: left;

    padding-left: 15px;

    font-weight: bold;
    color: #E17C24;
    }
/********************** Catalog Listing */

/* List Type */
.listing-type-list .listing-item { border-top:1px solid #D9DDE3; padding:12px 10px; }
.listing-type-list .product-image { float:left; width:135px; }
.listing-type-list .product-shop { width:305px; }
.listing-type-list .product-shop .description { margin:.5em 0 1.2em 0; }
.listing-type-list .product-shop .price-box { float:left;text-align:left; margin:3px 13px 5px 0;}
.listing-type-list .product-shop .product-reviews { margin:15px 0; font-size:.95em; }
.listing-type-list .product-shop .product-reviews a, .listing-type-list .product-shop .product-reviews a:hover { color:#6e6969; }
.listing-type-list .listing-item .rating-box { margin-bottom:6px; }



/* Grid Type */
.listing-type-grid td { width:33%; text-align:left; }
.listing-type-grid .product-image { text-align:center; }
/* ... */

